[tool.poetry]
name = "luxeria-led-python"
version = "0.1.0"
description = ""
authors = ["Raphael Nestler <raphael.nestler@renuo.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "*"
pyautogui = "^0.9.54"
pyscreenshot = "^3.1"
pillow = "^11.0.0"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
